Day view and week view up and running

--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="event_color_02">#f57f68</color>
     <color name="event_color_03">#87d288</color>
     <color name="event_color_04">#f8b552</color>
+    <color name="event_color_upcoming">#bb1a35</color>
+    <color name="event_color_past">#e23351</color>
 </resources>
