Bugs fixed, Scroll view embedded in Month view

--- a/caldroid/src/main/res/layout/normal_date_cell.xml
+++ b/caldroid/src/main/res/layout/normal_date_cell.xml
@@ -6,6 +6,5 @@
     android:background="@drawable/cell_bg"
     android:gravity="center"
     android:textSize="14sp"
-    android:textStyle="bold"
-    android:padding="5dp"/>
+    android:textStyle="bold"/>
 
