--- a/caldroid/src/main/res/drawable/cell_bg.xml
+++ b/caldroid/src/main/res/drawable/cell_bg.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/caldroid_holo_blue_light" android:state_pressed="true"/> <!-- pressed -->
-    <item android:drawable="@color/caldroid_white" android:state_pressed="false"/> <!-- normal -->
+    <item android:drawable="@color/blank_space" android:state_pressed="false"/> <!-- normal -->
 
 </selector>
