--- a/caldroid/src/main/res/layout/calendar_view.xml
+++ b/caldroid/src/main/res/layout/calendar_view.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@color/caldroid_white"
-    android:orientation="vertical" >
+    android:fillViewport="true"
+    android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/calendar_title_view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/calendar_left_arrow"
-            android:layout_width="50dp"
-            android:layout_height="44dp"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/left_arrow" />
+        <RelativeLayout
+            android:id="@+id/calendar_title_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/calendar_month_year_textview"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                android:background="#E0144F"
+                android:gravity="center"
+                android:textIsSelectable="true" />
+
+            <Button
+                android:id="@+id/calendar_left_arrow"
+                android:layout_width="50dp"
+                android:layout_height="44dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/left_arrow" />
+
+            <TextView
+                android:id="@+id/calendar_month_year_textview"
+                android:layout_width="match_parent"
+                android:layout_height="68dp"
+                android:layout_toLeftOf="@+id/calendar_right_arrow"
+                android:layout_toRightOf="@+id/calendar_left_arrow"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textIsSelectable="true"
+                android:textSize="21sp"
+                android:textStyle="bold" />
+
+            <Button
+                android:id="@+id/calendar_right_arrow"
+                android:layout_width="50dp"
+                android:layout_height="44dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/right_arrow" />
+        </RelativeLayout>
+
+        <GridView
+            android:id="@+id/weekday_gridview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:layout_toLeftOf="@+id/calendar_right_arrow"
-            android:layout_toRightOf="@+id/calendar_left_arrow"
-            android:gravity="center_horizontal"
-            android:textIsSelectable="true"
-            android:textSize="21sp"
-            android:textColor="@android:color/black"/>
+            android:layout_marginTop="10dp"
+            android:numColumns="7"
+            android:stretchMode="columnWidth"></GridView>
 
-        <Button
-            android:id="@+id/calendar_right_arrow"
-            android:layout_width="50dp"
-            android:layout_height="44dp"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/right_arrow" />
-    </RelativeLayout>
-
-    <GridView
-        android:id="@+id/weekday_gridview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-10dp"
-        android:numColumns="7"
-        android:stretchMode="columnWidth" >
-    </GridView>
-
-    <com.antonyt.infiniteviewpager.InfiniteViewPager
-        android:id="@+id/months_infinite_pager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</LinearLayout>
+        <com.antonyt.infiniteviewpager.InfiniteViewPager
+            android:id="@+id/months_infinite_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</ScrollView>
