--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -3,15 +3,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/root"
     android:background="#fff"
     tools:context=".MyActivity">
+
+    <RelativeLayout
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="71dp"
+        android:background="@color/button_selected"
+        android:layout_alignParentTop="true">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="23dp"
+            android:layout_centerVertical="true"
+            android:background="@color/caldroid_transparent"
+            android:src="@drawable/back"/>
+        <TextView
+            android:id="@+id/header_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/caldroid_white"
+            android:textSize="19sp"
+            android:layout_centerInParent="true"
+            android:text="Select Slot"/>
+        </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/stylist_option"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_below="@id/title_bar"
+        android:background="@color/caldroid_white">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="23dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:background="@color/caldroid_transparent"
+            android:src="@drawable/more"/>
+        <TextView
+            android:id="@+id/stylist_option_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginLeft="23dp"
+            android:layout_centerVertical="true"
+            android:textColor="@color/button_not_selected"
+            android:textSize="13sp"
+            android:text="Select Stylist"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/button_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
         android:orientation="horizontal"
+        android:layout_below="@id/stylist_option"
         android:weightSum="3">
 
         <Button
@@ -19,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="15sp"
             android:textColor="@color/caldroid_white"
             android:background="@color/button_selected"
             android:onClick="onClick"
@@ -29,6 +83,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="15sp"
             android:textColor="@color/caldroid_white"
             android:background="@color/button_not_selected"
             android:onClick="onClick"
@@ -39,11 +94,20 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:textSize="15sp"
             android:textColor="@color/caldroid_white"
             android:background="@color/button_not_selected"
             android:onClick="onClick"
             android:text="@string/action_month_view" />
     </LinearLayout>
+
+    <fragment
+        class="com.alamkanak.weekview.fragment.BottomNavigationFragment"
+        android:id="@+id/menu_bar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"></fragment>
 
     <com.alamkanak.weekview.WeekView
         android:id="@+id/weekView"
@@ -60,13 +124,15 @@
         app:headerRowPadding="15dp"
         app:noOfVisibleDays="1"
         app:textSize="12sp"
+        android:layout_above="@id/menu_bar"
         app:todayHeaderTextColor="@color/caldroid_white" />
 
     <LinearLayout
         android:id="@+id/calendar_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/button_container"
+        android:layout_above="@id/menu_bar"
         android:orientation="vertical"></LinearLayout>
 
 </RelativeLayout>
