--- a/sample/src/main/res/layout/custom_month_calendar.xml
+++ b/sample/src/main/res/layout/custom_month_calendar.xml
@@ -1,6 +1,7 @@
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/calendar_gridview"
+        android:background="@color/cell_separator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
