--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="blank_space">#EBECEC</color>
     <color name="header_text_color">#353F49</color>
     <color name="cell_separator">#EBECEF</color>
+    <color name="green">#009900</color>
+    <color name="red">#BB0000</color>
 </resources>
