--- a/caldroid/src/main/res/layout/calendar_view.xml
+++ b/caldroid/src/main/res/layout/calendar_view.xml
@@ -19,7 +19,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="68dp"
-                android:background="#E0144F"
+                android:background="@color/blank_space"
                 android:gravity="center"
                 android:textIsSelectable="true" />
 
@@ -38,9 +38,9 @@
                 android:layout_toLeftOf="@+id/calendar_right_arrow"
                 android:layout_toRightOf="@+id/calendar_left_arrow"
                 android:gravity="center"
-                android:textColor="@android:color/white"
+                android:textColor="@color/month_text_color"
                 android:textIsSelectable="true"
-                android:textSize="21sp"
+                android:textSize="19sp"
                 android:textStyle="bold" />
 
             <Button
