--- a/caldroid/src/main/res/drawable/left_arrow.xml
+++ b/caldroid/src/main/res/drawable/left_arrow.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="center"
     android:src="@drawable/white_arrow_back"
-    android:tileMode="disabled" android:gravity="center" >
-</bitmap>
+    android:tileMode="disabled"></bitmap>
