--- a/caldroid/src/main/res/layout/weekday_textview.xml
+++ b/caldroid/src/main/res/layout/weekday_textview.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:textColor="#888"
     android:gravity="center"
-    android:textSize="15sp"
+    android:paddingBottom="10dp"
     android:paddingTop="5dp"
-    android:paddingBottom="10dp"/>
+    android:textColor="#888"
+    android:textSize="15sp" />
